wwwroot/assets/css/style.css
/* ... */
.navLinks a:hover {
    text-decoration: none;
    color: rgb(158, 41, 41);
    transition: ease 0.3s;
}

#totalComments, #totalPosts {
    margin-left: 5px;
}

.menu {
    border-top: 10px rgb(218, 218, 218) solid;
    background-image: linear-gradient(to bottom right, rgb(211, 40, 40), rgb(67, 1, 1));
    height: 100px;
    width: 300px;
    rotate: -135deg;
    position: fixed;
    right: -90px;
    top: -75px;
    z-index: 3;
}

.menu button {
    border: none;
    transition: all 0.2s;
    background-color: transparent;
    color: aliceblue;
    font-size: 35px;
    rotate: 135deg;
    position: fixed;
    left: 75px;
    bottom: 45px;
    cursor: pointer;
}

.menu button:hover {
    color: rgb(39, 39, 39);
    transition: all 0.1s;
}

#addUrlHere {
    width: unset;
}

.foldopenMenu {
    display: flex;
    justify-content: flex-start;
    flex-direction: column;
    font-family: Arial, sans-serif;
    position: fixed;
    right: -320px;
    top: 0;
    height: 100vh;
    width: 311px;
    background-color: #292a2c;
    z-index: 2;
    border-left: solid 1px rgb(28, 28, 28);
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
    transition: all 0.3s;
}

.username {
    color: rgb(217, 43, 57);
    padding: 15px;
    margin: 3px;
    border-radius: 5px;
}

.username:hover {
    color: rgb(244, 159, 166);
    transition: all 0.3s;
}

.foldopenMenu h3 {
    color: aliceblue;
    margin: 10px 0 0 15px;
    background-image: linear-gradient(to bottom right, rgb(25, 22, 39), rgb(0, 0, 0));
    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
}

.foldopenMenu p {
    margin-left: 20px;
    cursor: pointer;
    color: aliceblue;
}

.foldopenMenu a {
    text-decoration: none;
    color: aliceblue;
}

.foldopenMenu a:hover {
    color: rgb(180, 180, 180);
    transition: ease 0.1s;
}

.corporateSeals {
    background-color: brown;
}


.defaultTitleStyling {
    width: 76%;
    align-self: flex-end;
    font-family: 'Trebuchet MS', sans-serif;
    margin-right: 1.5%;
    margin-top: 10px;
    margin-bottom: 20px;
    display: flex;
    flex-direction: row;
}

.defaultTitleStyling h2 { 
    font-size: 45px;
    margin: 0;
}

#space {
    margin-right: 1%;
}

.userBiography {
    background-color: #2d2b2b;
    width: calc(100% - 386px);
    align-self: flex-end;
    margin: 0 30px 30px;
    border-radius: 5px;
    font-family: 'Trebuchet MS', sans-serif;
    padding: 20px;
}

.userBiography h1 {
    margin: 0;
    color: #9c1818;
}

.mostRecentPosts {
    background-color: #191919;
    color: rgb(188, 35, 21);
    font-family: 'Trebuchet MS', sans-serif;
    font-size: 25px;
}

.mostRecentPosts h1 {
    margin: 0 0 50px 17%;
}

#totalQquestionAmount {
    margin: 0;
}

#whoAsked {
    position: relative;
    bottom: 5px;
    display: flex;

}

#whoAsked p {
    margin: 0 5px 0;
    color: #505050;
}

.landingsPageContnetBox {
    background-color: #202020;
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: calc(100vh - 80px);
    margin: 0 0 10px;
    padding-top: 80px;
}




.theSideWithTheText {
    display: flex;
    justify-content: center;
    flex-direction: column;
    padding-top: 15vh;
    align-self: flex-start;
    /* background-color: #7a7a7a; */
}

.statisticsForLandingsPage {
    /* background-color: #961d1d; */
    align-self: flex-start;
    /* flex-grow: 1; */
    margin: 0;
    display: flex;
    width: fit-content;
    /* align-items: flex-end; */
    /* padding-bottom: 20vh; */
    padding-top: 15vh;
}

#memberStats {
    margin: 0 10px 0 10px;
}

#answerStats {
    margin: 0 10px 0 10px;
}

#questionStats {
    margin: 0;
    margin: 0 10px 0 10px;
}

.statisticContainer {
    background-color: #171717;
    display: flex;
    justify-content: center;
    flex-direction: column;
    margin: 0;
    /* height: 340px; */
    border-radius: 3px;
    padding: 15px;
}

.statisticContainer h1 {
    /* color: rgb(88, 88, 88); */
    font-family: Tahoma, sans-serif;
    margin: 0;
    font-size: 40px;
}

.statisticContainer h4 {
    font-family: Tahoma, sans-serif;
    margin: 0 0 0 15px;
    position: relative;
    top: 6px;
}

.statisticContainer h5 {
    font-family: Tahoma, sans-serif;
    margin: 0 0 20px 5px;
    font-weight: 100;
    position: relative;
    opacity: 0.5;
    font-style: oblique -5deg;
    bottom: 5px;
}

.statisticContainer button {
    position: relative;
    font-family: Tahoma, sans-serif;
    left: 10px;
}

.statisticContainer p {
    font-family: 'Trebuchet MS', sans-serif;
    font-size: 20px;
    margin: 0;
}

.statisticContainer i {
    position: relative;
    top: 2px;
}

.rowItem {
    display: flex;
}

.statValue {
    color: #da2626;;
    font-weight: bold;
    /* margin-top: 5px; */
    margin: 0;
}

.theSideWithTheText h1 {
    margin: 5px 30px 0 35px;
    font-size: 3.4vw;
    color: #d91414;
    letter-spacing: 0.04em;
    font-family: 'Trebuchet MS', sans-serif;
    /* border-bottom: solid 3.5px #4b4b4b; */
    /* text-shadow: 1px 1px #f42d2d; */
}

.introText {
    font-size: 25px;
    font-family: 'Courier New', monospace;
    margin: 0 5px 0;
    margin-left: 3.5%;
    /* background-color: #000000; */
    width: 875px;
    /* align-self: center; */
    text-align: right;
}

.belowStatistics {
    font-family: 'Courier New', monospace;
    display: flex;
    font-size: 20px;
    opacity: 0.5;
    margin-right: 4%;
    align-self: flex-end;
}

.belowStatistics p {
    margin: 0;
}

.theSideWithTheStats {
    font-family: 'Trebuchet MS', sans-serif;
    font-size: 35px;
    text-align: left;
    letter-spacing: 0.03em;
    /* margin: 20px 8% 0 2%; */
    /* border-radius: 5px; */
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    padding: 25px;
    /* width: fit-content;
    height: fit-content; */
    background-image: linear-gradient(to bottom right, #2e2d2d, #2b2a2a);
    background-color: #2e2d2d;
    color: aliceblue;
}
/* ... */

